--- a/Base_Lab3_sw2/Base_Lab3_sw2/src/main/resources/templates/employee/newFrm.html
+++ b/Base_Lab3_sw2/Base_Lab3_sw2/src/main/resources/templates/employee/newFrm.html
@@ -10,7 +10,7 @@
 </head>
 <body class="container">
     <h2>Nuevo Empleado</h2><hr />
-        <form method="post" th:action="@{}">                <!-- COMPLETAR -->
+        <form method="post" th:action="@{'/employee/actualizar'}">                <!-- COMPLETAR -->
             <div class="row">
                 <div class="form-group col-6">
                     <!-- COMPLETAR -->
